# FIGV-6-Start

CMakeLists/Linux/: CMakeLists.txt
CMakeLists/MacOS/: CMakeLists.txt
FIGV/: CMakeCache.txt  CMakeLists.txt  FIGV.sln  FIGV.vcxproj  FIGV.vcxproj.filters  FigvAuxiliaryFunctions.cpp  FigvAuxiliaryFunctions.h  FigvCamera.cpp  FigvCamera.h  FigvEventManager.cpp  FigvEventManager.h  FigvLightSource.cpp  FigvLightSource.h  FigvMaterial.cpp  FigvMaterial.h  FigvMesh.cpp  FigvMesh.h  FigvModel.cpp  FigvModel.h  FigvRenderer.cpp  FigvRenderer.h  FigvScene.cpp  FigvScene.h  FigvShader.cpp  FigvShader.h  FigvUserInterface.cpp  FigvUserInterface.h  FigvWindowSystem.cpp  FigvWindowSystem.h  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.c  glad.h  imgui.ini  main.cpp
FIGV/FIGV.dir/Debug/: FIGV.exe.recipe  FIGV.vcxproj.FileListAbsolute.txt
FIGV/FIGV.dir/Debug/FIGV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FIGV.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
FIGV/imgui/examples/example_android_opengl3/: CMakeLists.txt
FIGV/shaders/: ._FigvADSFragment.glsl  FigvADSFragment.glsl  FigvADSVertex.glsl
FIGV/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
FIGV/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
FIGV/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
FIGV/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
